--- a/styles/portfolio-main.css
+++ b/styles/portfolio-main.css
@@ -13,7 +13,6 @@ body {
 h1, h2, h3, h4, h5, strong {
     font-weight: 300;
     line-height: 1.1;
-    font-family:"Quicksand", arial, sans-serif;  
 }
 body, h1, h2, h3, h4, h5, p, ul, img, hr {
     margin: 0;
@@ -139,7 +138,7 @@ section {
 .tile-container {
 	display: grid;
     grid-gap: 18px;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     justify-items: stretch;
     align-items: stretch;
 }
@@ -147,12 +146,14 @@ section {
     line-height: 0;
     border: 1px solid rgba(0,0,0,.3);
     background-color: white;
-    padding: 4px;
+    padding: 0;
     transition: padding .3s;
+    border-radius:8px;
 }
 .tile-thumbnail {
     position: relative;
     overflow: hidden;
+    border-radius:8px;
 }
 /*[data-type='demo'] .tile-thumbnail::after {
     content: "demo";
