--- a/styles/portfolio-main.css
+++ b/styles/portfolio-main.css
@@ -144,7 +144,7 @@ section {
 }
 .tile {
     line-height: 0;
-    border: 1px solid rgba(30,30,30,.12);
+    border: 1px solid rgba(30,30,30,.2);
     background-color: white;
     padding: 0;
     border-radius:8px;
@@ -152,6 +152,7 @@ section {
 }
 .tile-thumbnail {
     position: relative;
+    background-color: rgb(30,30,30);
 }
 /*[data-type='demo'] .tile-thumbnail::after {
     content: "demo";
