--- a/styles/portfolio-main.css
+++ b/styles/portfolio-main.css
@@ -148,11 +148,13 @@ section {
     background-color: white;
     padding: 4px;
     transition: padding .3s;
+    border-radius: 4px;
 }
 .tile-thumbnail {
     position: relative;
     overflow: hidden;
-    background-color: rgb(30,30,30)
+    background-color: rgb(30,30,30);
+    border-radius: 4px;
 }
 /*[data-type='demo'] .tile-thumbnail::after {
     content: "demo";
