--- a/styles/portfolio-main.css
+++ b/styles/portfolio-main.css
@@ -155,6 +155,9 @@ header {
     background-color: rgb(30,30,30);
     border-radius: 4px;
 }
+[data-type='demo'] {
+    display:none;
+}
 /*[data-type='demo'] .tile-thumbnail::after {
     content: "demo";
     text-transform: uppercase;
