--- a/styles/portfolio-main.css
+++ b/styles/portfolio-main.css
@@ -93,7 +93,9 @@ header {
 }
 
 /* Content */
-
+#main-content {
+    background: url('images/background/gplaypattern.png') top left repeat;
+}
 #main-content,
 #content-container {
     flex: 1;
