--- a/styles/portfolio-main.css
+++ b/styles/portfolio-main.css
@@ -157,7 +157,7 @@ header {
     background-color: rgb(30,30,30);
     border-radius: 4px;
 }
-[data-type='demo'] {
+[data-type='feature'] {
     display:none;
 }
 /*[data-type='demo'] .tile-thumbnail::after {
