--- a/styles/portfolio-main.css
+++ b/styles/portfolio-main.css
@@ -156,6 +156,7 @@ header {
 .tile-container.active-grid {
     opacity:1;
     z-index:25;
+    position:relative;
 }
 #tile-grid-header {
     display:inline-flex;
