--- a/styles/portfolio-main.css
+++ b/styles/portfolio-main.css
@@ -174,6 +174,7 @@ header {
 }
 .grid-tab-separator {
     margin: 0 20px;
+    opacity: .7;
 }
 #sliding-box {
     border: 1px solid rgb(62, 62, 62);
@@ -198,6 +199,7 @@ header {
     overflow: hidden;
     background-color: rgb(30,30,30);
     border-radius: 4px;
+    min-height: 135px;
 }
 /*[data-type='demo'] .tile-thumbnail::after {
     content: "demo";
