--- a/styles/portfolio-main.css
+++ b/styles/portfolio-main.css
@@ -361,6 +361,17 @@ header {
     z-index: 40;
     pointer-events: none;
 }
+#controls::after {
+    content:'';
+    position:absolute;
+    left:0;
+    right:0;
+    top:0;
+    bottom:0;
+    z-index:0;
+    pointer-events:none;
+    background-color:white;
+}
 .move-slide,
 #close-slide {
     display: block;
