--- a/styles/portfolio-main.css
+++ b/styles/portfolio-main.css
@@ -153,11 +153,12 @@ header {
     right: 0;
     top: 0;
     z-index:1;
+    pointer-events:none;
 }
 .tile-container.active-grid {
     opacity:1;
-    z-index:25;
     position:relative;
+    pointer-events:auto;
 }
 #tile-grid-header {
     display:inline-flex;
