--- a/styles/portfolio-main.css
+++ b/styles/portfolio-main.css
@@ -466,7 +466,56 @@ footer {
 }
 
 /* Responsive */
-
+@media (min-width:768px) {
+    .tile-container {
+        display: grid;
+        grid-gap: 12px;
+        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+        justify-items: stretch;
+        align-items: stretch;
+        position:absolute;
+        opacity:0;
+        transition:all .3s;
+        left: 0;
+        right: 0;
+        top: 0;
+        z-index:1;
+        pointer-events:none;
+    }
+    .tile-container.active-grid {
+        opacity:1;
+        position:static;
+        pointer-events:auto;
+    }
+    #tile-grid-header {
+        display:inline-flex;
+        position:relative;
+        align-items: center;
+        margin-bottom:20px;
+    }
+    .grid-tab {
+        display:block;
+        margin:0 20px;
+        color: inherit;
+    }
+    .grid-tab * {
+        pointer-events: none;
+    }
+    .grid-tab-separator {
+        margin: 0 20px;
+        opacity: .7;
+    }
+    #sliding-box {
+        border: 1px solid rgb(62, 62, 62);
+        opacity: .4;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 140px;
+        bottom: 0;
+        transition: all .3s;
+    }
+}
 @media (max-width:1199px) {
     body {
         font-size: 14px;
